tests/sumo/errors/unknown_vClass/errors.sumo
Warning: Unknown vehicle class 'futureClass' ignored.
